--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,7 @@
 description: Develop your own Python project.
 name:
+  - Python
+  - barbara
 display-name: stackspot-python-stack
 picture: https://hotmart.s3.amazonaws.com/product_contents/a3145272-0002-459b-a71b-08563972ec7e/640pxPythonlogonotextsvg.png
 category: Backend # Ref: https://docs.stackspot.com/latest/docs/creators-guide/yaml/#category
